--- a/css/demo.css
+++ b/css/demo.css
@@ -136,12 +136,15 @@ header nav ul li a:hover {
   text-align: center;
 }
 #tour #download {
-  margin: 1em 0 1.5em;
+  color: #333333;
+  margin: 2em 0 1.5em;
+  text-align: center;
 }
 #tour #download .button {
+  font-size: 1.2em;
   margin: 0 auto;
   padding: 0.5em 0;
-  width: 60%;
+  width: 100%;
 }
 #tour .rust {
   -webkit-border-radius: 8px 8px;
@@ -168,6 +171,31 @@ header nav ul li a:hover {
   background: -ms-linear-gradient(top, #cc6400 0%, #8b4501 100%);
   background: linear-gradient(top, #cc6400 0%, #8b4501 100%);
 }
+#tour .light-blue {
+  -webkit-border-radius: 8px 8px;
+  -moz-border-radius: 8px 8px;
+  -ms-border-radius: 8px 8px;
+  -o-border-radius: 8px 8px;
+  border-radius: 8px 8px;
+  color: white;
+  background: #3367ff;
+  background: -moz-linear-gradient(top, #3367ff 0%, #1a54ff 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3367ff), color-stop(100%, #1a54ff));
+  background: -webkit-linear-gradient(top, #3367ff 0%, #1a54ff 100%);
+  background: -o-linear-gradient(top, #3367ff 0%, #1a54ff 100%);
+  background: -ms-linear-gradient(top, #3367ff 0%, #1a54ff 100%);
+  background: linear-gradient(top, #3367ff 0%, #1a54ff 100%);
+}
+#tour .light-blue:hover, #tour .light-blue:active, #tour .light-blue:visited {
+  color: white;
+  background: #3367ff;
+  background: -moz-linear-gradient(top, #3367ff 0%, #0934b2 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3367ff), color-stop(100%, #0934b2));
+  background: -webkit-linear-gradient(top, #3367ff 0%, #0934b2 100%);
+  background: -o-linear-gradient(top, #3367ff 0%, #0934b2 100%);
+  background: -ms-linear-gradient(top, #3367ff 0%, #0934b2 100%);
+  background: linear-gradient(top, #3367ff 0%, #0934b2 100%);
+}
 
 @media screen and (max-width: 600px) {
   #tour h1 {
@@ -179,6 +207,7 @@ header nav ul li a:hover {
   #tour #download .button {
     font-size: 1em;
     font-weight: normal;
+    width: 60%;
   }
 }
 /* FEATURE TOUR */
