--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="get-started.html">Get Started</a></li>
 					<li><a href="grid.html">The Grid</a></li>
+					<!-- <li><a href="custom-generator.html">Generate</a></li> -->
 					<!--<li><a href="documentation.html">Docs</a></li>-->
 				</ul>
 			</nav>
