--- a/sass/core/_grid.sass
+++ b/sass/core/_grid.sass
@@ -62,10 +62,10 @@ $lang-back: right
         *padding-right: 0
         /* IE7 */
         & > *
-        /* IE7 */
-        *margin-left: expression((!this.className.match(/grid-[1-9]/) && this.currentStyle.display === "block" && this.currentStyle.width === "auto") && "#{$space}")
-        *margin-right: expression((!this.className.match(/grid-[1-9]/) && this.currentStyle.display === "block" && this.currentStyle.width === "auto") && "#{$space}")
-        /* IE7 */
+          /* IE7 */
+          *margin-left: expression((!this.className.match(/grid-[1-9]/) && this.currentStyle.display === "block" && this.currentStyle.width === "auto") && "#{$space}")
+          *margin-right: expression((!this.className.match(/grid-[1-9]/) && this.currentStyle.display === "block" && this.currentStyle.width === "auto") && "#{$space}")
+          /* IE7 */
       position: relative
       
   
@@ -145,18 +145,62 @@ $lang-back: right
   width: $total-width
   @include auto-center
 
-@mixin sem-grid($col-width)
+@mixin sem-grid($col-width, $padding: 15px)
   +box-sizing(border-box)
   @include float-left
-  padding: 0 15px
+  padding: 0 $padding
   position: relative
   width: 1% * $col-width
 
-@mixin sem-push($offset-push)
-  $direction: (1% * $offset-push)
+@mixin sem-push($offset-push, $direction: $lang-front)
+  #{$direction}: (1% * $offset-push)
 
-@mixin sem-pull($offset-pull)
-  $direction: -(1% * $offset-pull)
+@mixin sem-pull($offset-pull, $direction: $lang-front)
+  #{$direction}: -(1% * $offset-pull)
+
+
+
+// IE7 Support for Semantic Grids
+
+@mixin sem-ie-grid($num, $space:2%)
+  $decimal: $num / 100
+  @include ie7-grid-element($decimal)
+  @if $ie7-support
+    *padding-left: 0
+    *padding-right: 0
+    & > *
+      *margin-left: expression((!this.className.match(/grid-[1-9]/) && this.currentStyle.display === "block" && this.currentStyle.width === "auto") && "#{$space}")
+      *margin-right: expression((!this.className.match(/grid-[1-9]/) && this.currentStyle.display === "block" && this.currentStyle.width === "auto") && "#{$space}")
+
+@mixin sem-ie-push($num, $space:2%)
+  $decimal: $num / 100
+  @include ie7-push($decimal)
+
+@mixin sem-ie-pull($num)
+  $decimal: $num / 100
+  @include ie7-pull($decimal)
+
+
+@mixin sem-ie-grid-thirds($num, $space:2%)
+  $mul: 1/3
+  $decimal: $num * $mul
+  @include ie7-grid-element($decimal)
+  @if $ie7-support
+    *padding-left: 0
+    *padding-right: 0
+    & > *
+      *margin-left: expression((!this.className.match(/grid-[1-9]/) && this.currentStyle.display === "block" && this.currentStyle.width === "auto") && "#{$space}")
+      *margin-right: expression((!this.className.match(/grid-[1-9]/) && this.currentStyle.display === "block" && this.currentStyle.width === "auto") && "#{$space}")
+
+@mixin sem-ie-push-thirds($num)
+  $mul: 1/3
+  $decimal: $num * $mul
+  @include ie7-push($decimal)
+
+@mixin sem-ie-pull-thirds($num)
+  $mul: 1/3
+  $decimal: $num * $mul
+  @include ie7-pull($decimal)
 
 
 
