--- a/sass/centurion-ie.sass
+++ b/sass/centurion-ie.sass
@@ -28,7 +28,7 @@ $ie7-support: true
 @include grid-generate
 
 /* Centering Grid */
-@include centerGrid
+@include center-grid
 
 /* Clearfix */
 @include clearfix
