Fixed center-grid issue on fluid stylesheet

--- a/sass/fluid.sass
+++ b/sass/fluid.sass
@@ -12,7 +12,7 @@
 /* Desktop/Tablet Fluid Grid Layout - 92% */
 @include grid-generate(98%)
 
-@include centerGrid
+@include center-grid
 
 /* Clearfix */
 @include clearfix
