--- a/sass/demo.sass
+++ b/sass/demo.sass
@@ -286,8 +286,8 @@ hr.headline-line
     font-size: 1.2em
   
   code
-    background: $gold
-    border-color: $gold
+    background: $rust
+    border-color: $rust
     color: #FFF
   
   pre
