--- a/_includes/ga.html
+++ b/_includes/ga.html
@@ -3,6 +3,7 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  var _gaq = _gaq || [];
   ga('create', 'UA-42226367-1', 'jhough10.github.io');
   ga('send', 'pageview');
   </script>
