moved base font size to base file

--- a/sass/core/_typography.sass
+++ b/sass/core/_typography.sass
@@ -1,5 +1,5 @@
 body
-  font-size: 15px
+  font-size: $font-size-default
 
 // Default links
 @mixin links($change-link-color: $link-color, $change-hover-color: $link-hover-color)
