--- a/css/fluid.css
+++ b/css/fluid.css
@@ -238,7 +238,7 @@ body {
   margin-right: auto;
 }
 
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
   .container {
     width: 100%;
     margin-left: auto;
@@ -308,12 +308,12 @@ body {
     display: none !important;
   }
 }
-@media screen and (max-width: 920px) {
+@media only screen and (min-width: 601px) and (max-width: 920px) {
   .container {
     width: 98%;
   }
 }
-@media screen and (min-width: 1120px) {
+@media only screen and (min-width: 921px) and (max-width: 1120px) {
   .container {
     width: 1120px;
   }
