Updated version, moved base file import, added mixing for show/hide elements

--- a/sass/centurion-ie-rtl.sass
+++ b/sass/centurion-ie-rtl.sass
@@ -1,14 +1,14 @@
-@import "core/base"
 /* --------------------------------------------------------
  *
- *  Centurion Framework v 3.3 - IE Right-to-Left Stylesheet
- *  Created by: Justin Hough
+ *  Centurion Framework v 3.4 - IE Right-to-Left Stylesheet
+ *  Created by: Justin Hough (http://justinhough.com/)
  *
  *  Documentation: http://jhough10.github.com/Centurion/get-started.html
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
 
+@import "core/base"
 $ie7-support: true
 $lang-front: right
 $lang-back: left
@@ -24,14 +24,4 @@ $lang-back: left
 
 @include extendables
 
-%show-block
-  display: block
-
-%hide-block
-  display: none
-
-.hide-desktop
-  @extend %hide-block
-
-.hide-mobile
-  @extend %show-block
+@include mobile-view
