--- a/sass/centurion-ie.sass
+++ b/sass/centurion-ie.sass
@@ -1,14 +1,14 @@
-@import "core/base"
 /* --------------------------------------------------------
  *
- *  Centurion Framework v 3.3 - IE Stylesheet
- *  Created by: Justin Hough
+ *  Centurion Framework v 3.4 - IE Stylesheet
+ *  Created by: Justin Hough (http://justinhough.com/)
  *
  *  Documentation: http://jhough10.github.com/Centurion/get-started.html
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
 
+@import "core/base"
 $ie7-support: true
 
 /*   GRID  */
@@ -22,14 +22,4 @@ $ie7-support: true
 
 @include extendables
 
-%show-block
-  display: block
-
-%hide-block
-  display: none
-
-.hide-desktop
-  @extend %hide-block
-
-.hide-mobile
-  @extend %show-block
+@include mobile-view
