--- a/sass/centurion-rtl.sass
+++ b/sass/centurion-rtl.sass
@@ -1,14 +1,14 @@
-@import "core/base"
 /* --------------------------------------------------------
  *
- *  Centurion Framework v 3.3 - Right-to-Left Stylesheet
- *  Created by: Justin Hough
+ *  Centurion Framework v 3.4 - Right-to-Left Stylesheet
+ *  Created by: Justin Hough (http://justinhough.com/)
  *
  *  Documentation: http://jhough10.github.com/Centurion/get-started.html
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
 
+@import "core/base"
 $lang-front: right
 $lang-back: left
 
@@ -66,16 +66,4 @@ $lang-back: left
 /* Print */
 @include print
 
-
-%show-block
-  display: block
-
-%hide-block
-  display: none
-
-.hide-desktop
-  @extend %hide-block
-
-.hide-mobile
-  @extend %show-block
-  
+@include mobile-view
