--- a/sass/centurion.sass
+++ b/sass/centurion.sass
@@ -1,14 +1,14 @@
-@import "core/base"
 /* --------------------------------------------------------
  *
- *  Centurion Framework v 3.3
- *  Created by: Justin Hough
+ *  Centurion Framework v 3.4
+ *  Created by: Justin Hough (http://justinhough.com/)
  *
  *  Documentation: http://jhough10.github.com/Centurion/get-started.html
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
 
+@import "core/base"
 
 /*   GRID  */
 @include grid-generate
@@ -64,16 +64,5 @@
 /* Print */
 @include print
 
-
-%show-block
-  display: block
-
-%hide-block
-  display: none
-
-.hide-desktop
-  @extend %hide-block
-
-.hide-mobile
-  @extend %show-block
+@include mobile-view
   
