converted colors and box-shadows to use default built-in mixins.

--- a/sass/core/_alerts.sass
+++ b/sass/core/_alerts.sass
@@ -5,10 +5,10 @@
       color: $white
 
   .alert
-    background: #ccc
+    background: $grey
     border: 1px solid $grey
     @include border-radius(4px)
-    box-shadow: 2px 2px 5px $grey
+    @include box-shadow(2px,2px,5px,$grey)
     color: $white
     margin:  $dh-margin
     padding: 10px 20px
