--- a/sass/core/_breadcrumbs.sass
+++ b/sass/core/_breadcrumbs.sass
@@ -6,17 +6,17 @@
       background: $lightgrey
       padding: 7px 10px
       border: 1px solid $grey
-      border-radius: 2px
+      @include border-radius(2px)
       overflow: hidden
       li
         margin: 0
-        padding: 0 10px 0 0
+        padding: 0 $d-padding 0 0
         display: inline-block
         a,
         span
           text-transform: uppercase
           font-size: ($default-font-size - 0.2)
-          padding-right: 10px
+          padding-right: $d-padding
         
         &:after 
           content: ">"
