--- a/sass/core/_vars.sass
+++ b/sass/core/_vars.sass
@@ -1,28 +1,11 @@
-// COLOR              TOP     BOTTOM
+// Media Breakpoints
+$breakpoint-small: 600px
+$breakpoint-medium: 920px
+$breakpoint-large: 1120px
 
-// Black          -   #7d7e7d   #0e0e0e
-// Black:hover    -   #9b9b9b   #3d3d3d
-
-// grey           -   #ffffff   #e5e5e5
-// grey:hover     -   #ffffff   #b7b7b7
-
-// blue           -   #a7cfdf   #23538a
-// blue:hover     -   #a7cfdf   #004089
-
-// red            -   #ff3019   #cf0404
-// red:hover      -   #ff3819   #aa0303
-
-// yellow         -   #fced62   #febf04
-// yellow:hover   -   #fced62   #ffaa00
-
-// orange         -   #ffa84c   #ff7b0d
-// orange:hover   -   #ffa84c   #fc6000
-
-// green          -   #a4b357   #75890c
-// green:hover    -   #a4b357   #5b7a00
-
-
+// Typography
 // Font Size
+$font-size-default: 15px
 $default-font-size: 1em
 $small-font-size: .8em
 
@@ -63,6 +46,7 @@ $dh-margin: 15px 0
 $dw-margin: 0 15px
 $d-margin: 15px
 $no-margin: 0
+$t-margin: 15px 0 0 0
 $b-margin: 0 0 15px 0
 
 
@@ -71,9 +55,11 @@ $dh-padding: 15px 0
 $dw-padding: 0 15px
 $d-padding: 15px
 $no-padding: 0
+$t-padding: 15px 0 0 0
 $b-padding: 0 0 15px 0
 
 $table-pad: 5px 10px
+
 
 @mixin extendables  
   %noMarPad
@@ -101,3 +87,27 @@ $table-pad: 5px 10px
   
   %float-right
     float: right
+
+
+// COLOR              TOP     BOTTOM
+
+// Black          -   #7d7e7d   #0e0e0e
+// Black:hover    -   #9b9b9b   #3d3d3d
+
+// grey           -   #ffffff   #e5e5e5
+// grey:hover     -   #ffffff   #b7b7b7
+
+// blue           -   #a7cfdf   #23538a
+// blue:hover     -   #a7cfdf   #004089
+
+// red            -   #ff3019   #cf0404
+// red:hover      -   #ff3819   #aa0303
+
+// yellow         -   #fced62   #febf04
+// yellow:hover   -   #fced62   #ffaa00
+
+// orange         -   #ffa84c   #ff7b0d
+// orange:hover   -   #ffa84c   #fc6000
+
+// green          -   #a4b357   #75890c
+// green:hover    -   #a4b357   #5b7a00
