--- a/css/centurion-ie-rtl.css
+++ b/css/centurion-ie-rtl.css
@@ -19,7 +19,12 @@ body {
 }
 .container [class*="grid-"] {
   -webkit-box-sizing: border-box;
+  box-sizing: border-box;
   -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  -o-box-sizing: border-box;
   box-sizing: border-box;
   float: right;
   padding: 0 15px;
