--- a/sass/core/_mixins.sass
+++ b/sass/core/_mixins.sass
@@ -1,3 +1,6 @@
+$default-prefixes: webkit moz ms o
+$prefixes: $default-prefixes
+
 // Mixins
 
 // Clearfix
@@ -26,9 +29,9 @@
 
 // Box Sizing
 @mixin box-sizing($value:border-box)
-  -webkit-box-sizing: $value
-  -moz-box-sizing: $value
-  box-sizing: $value
+  @each $prefix in $prefixes
+    -#{$prefix}-box-sizing: $value
+    box-sizing: $value
 
 
 // Center a sized element
@@ -38,6 +41,8 @@
   
 
 // Floating elements
+// replace @include float-left
+// replace @include float-right
 @mixin float-left
   float: left  
 @mixin float-right
@@ -111,21 +116,22 @@
 // @include gradient-three(#1, #2, #3)
 @mixin gradient-three($start, $middle, $end)
   background: $start
-  background: -moz-linear-gradient(top,  $start 0%, $middle 40%, $end 100%)
+  background: -moz-linear-gradient(top, $start 0%, $middle 40%, $end 100%)
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$start), color-stop(40%,$middle), color-stop(100%,$end))
-  background: -webkit-linear-gradient(top,  $start 0%,$middle 40%,$end 100%)
-  background: -o-linear-gradient(top,  $start 0%,$middle 40%,$end 100%)
-  background: -ms-linear-gradient(top,  $start 0%,$middle 40%,$end 100%)
-  background: linear-gradient(top,  $start 0%,$middle 40%,$end 100%)
+  background: -webkit-linear-gradient(top, $start 0%, $middle 40%, $end 100%)
+  background: -o-linear-gradient(top, $start 0%, $middle 40%, $end 100%)
+  background: -ms-linear-gradient(top, $start 0%, $middle 40%, $end 100%)
+  background: linear-gradient(top,  $start 0%, $middle 40%, $end 100%)
+
+
+
 
 // Box Shadow - custom with defaults (4 values)
 // @include box-shadow
 @mixin box-shadow($top: 0, $bottom: 0, $spread: 5px, $color: rgba(#000, .4))
-  -moz-box-shadow: $top $bottom $spread $color
-  -webkit-box-shadow: $top $bottom $spread $color
-  -ms-box-shadow: $top $bottom $spread $color
-  -o-box-shadow: $top $bottom $spread $color
-  box-shadow: $top $bottom $spread $color
+  @each $prefix in $prefixes
+    -#{$prefix}-box-shadow: $top $bottom $spread $color
+    box-shadow: $top $bottom $spread $color
 
 
 
@@ -161,22 +167,3 @@
   white-space: -moz-pre-wrap
   white-space: -hp-pre-wrap
   word-wrap: break-word
-  
-//@mixin default-heading($color, $size)
-//  color: $color
-//  display: block
-//  font-family: $heading-font
-//  font-size: $size
-//  line-height: $line-height
-
-
-// Headings
-//@mixin heading($size, $margin-height, $color: $text-color)
-//  @include default-heading($color, $size)
-//  font-weight: bold
-//  margin: $margin-height 0
-
-//@mixin header-headings($size, $color)
-//  @include default-heading($color, $size)
-//  font-weight: normal
-//  margin: 10px 0
