--- a/css/centurion.css
+++ b/css/centurion.css
@@ -1146,8 +1146,10 @@ ul li {
 }
 
 code, pre {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
+  -webkit-radius: 4px;
+  -moz-radius: 4px;
+  -ms-radius: 4px;
+  -o-radius: 4px;
   border-radius: 4px;
   font-family: "Lucida Console", Monaco, monospace;
   font-size: 0.9em;
@@ -1164,12 +1166,9 @@ pre {
   display: block;
   line-height: 1.5;
   padding: 0;
-  word-break: break-all;
-  word-wrap: break-word;
-  white-space: pre-wrap;
 }
 pre code {
-  background: #ededed;
+  background: #999999;
   color: #333333;
   display: block;
   padding: 1em;
