--- a/sass/core/_vars.sass
+++ b/sass/core/_vars.sass
@@ -26,6 +26,7 @@ $black: rgba(#000000, 1.0)
 $almost-white: rgba(#EDEDED, 1.0)
 $grey: rgba(#CCCCCC, 1.0)
 $lightgrey: rgba(#999999, 1.0)
+$darkgrey: rgba(#333333, 1.0)
 
 $red: #ff3019
 $yellow: #febf04
@@ -33,7 +34,7 @@ $blue: #a7cfdf
 $green: #a4b357
 
 
-// Links
+// Links - RGBA
 $link-color: rgba(#ffa84c, 1.0)
 $link-hover-color: rgba(#000000, 1.0)
 
